updated donate button colors

--- a/public/lang/de/index.html
+++ b/public/lang/de/index.html
@@ -47,7 +47,7 @@
 					<!-- donate button -->
 					<div class="relative">
 						<div class="h-[3.5rem] flex items-center">
-							<button class="group donate-nav-button  bg-yellow-500 dark:bg-[#992511] hover:bg-yellow-600 dark:hover:bg-[#7e1f0f] rounded-full px-5 py-1 transition duration-300">
+							<button class="group donate-nav-button  bg-indigo-500 dark:bg-indigo-700 hover:bg-indigo-700 dark:hover:bg-indigo-800 rounded-full px-5 py-1 transition duration-300">
 								<span class="text-[1.05rem] font-semibold text-white transition-colors duration-200"> Spenden </span>
 							</button>
 						</div>
