--- a/public/lang/id/credits/index.html
+++ b/public/lang/id/credits/index.html
@@ -33,12 +33,12 @@
 					</a>
 					<!-- primary nav -->
 					<div class="hidden xl:flex items-center space-x-5 pt-1 text-[1.05rem] font-semibold">
-						<a href="/lang/id" class="text-gray-600 dark:text-gray-300 hover:text-gray-100 rounded-full  px-5 py-1   hover:bg-[#E23B8B] transition duration-300"> Halaman Utama </a>
+						<a href="/lang/id" class="text-gray-600 dark:text-gray-300 rounded-full  px-5 py-1 border-2 border-transparent hover:border-[#E23B8B] dark:hover:border-[#E23B8B] transition duration-300"> Halaman Utama </a>
 						
-						<a href="/lang/id/changelog/" class="text-gray-600 dark:text-gray-300 hover:text-gray-100 rounded-full  px-5 py-1   hover:bg-[#E23B8B] transition duration-300"> Sejarah Perubahan </a>
-						<a href="/lang/id/faq/" class="text-gray-600 dark:text-gray-300 hover:text-gray-100 rounded-full  px-5 py-1   hover:bg-[#E23B8B] transition duration-300"> Pertanyaan umum </a>
-						<a href="/lang/id/credits/" class="text-gray-100 rounded-full px-5 py-1 bg-[#E23B8B] transition duration-300"> Tim </a>
-						<button class="contact-nav-button text-gray-600 dark:text-gray-300 hover:text-gray-100 rounded-full  px-5 py-1   hover:bg-[#E23B8B] transition duration-300 font-semibold">Pesan Bantuan</button>
+						<a href="/lang/id/changelog/" class="text-gray-600 dark:text-gray-300 rounded-full  px-5 py-1 border-2 border-transparent hover:border-[#E23B8B] dark:hover:border-[#E23B8B] transition duration-300"> Sejarah Perubahan </a>
+						<a href="/lang/id/faq/" class="text-gray-600 dark:text-gray-300 rounded-full  px-5 py-1 border-2 border-transparent hover:border-[#E23B8B] dark:hover:border-[#E23B8B] transition duration-300"> Pertanyaan umum </a>
+						<a href="/lang/id/credits/" class="rounded-full px-5 py-1 border-2 border-[#E23B8B] text-[#f54399] transition duration-300"> Tim </a>
+						<button class="font-semibold contact-nav-button text-gray-600 dark:text-gray-300 rounded-full  px-5 py-1 border-2 border-transparent hover:border-[#E23B8B] dark:hover:border-[#E23B8B] transition duration-300">Pesan Bantuan</button>
 					</div>
 				</div>
 
@@ -58,11 +58,11 @@
 					<ul>
 						<li class="relative text-[1.05rem] font-semibold">
 							<!-- language button -->
-							<button class="language-button flex items-center space-x-1 rounded-full px-5 py-1 transition-colors duration-200 hover:bg-[#E23B8B] group">
-								<span class="text-gray-600 dark:text-gray-300 transition-colors duration-200 group-hover:text-gray-100 dark:group-hover:text-gray-200 font-semibold"> Bahasa Indonesia </span>
+							<button class="language-button flex items-center space-x-1 rounded-full px-5 py-1 border-2 border-transparent hover:border-[#E23B8B] dark:hover:border-[#E23B8B] transition duration-300 group">
+								<span class="text-gray-600 dark:text-gray-300 transition-colors duration-200 group-hover:text-gray-600 dark:group-hover:text-gray-200 font-semibold"> Bahasa Indonesia </span>
 								<!-- icon -->
 								<div class="">
-									<svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 transition duration-200 text-gray-600 dark:text-gray-300 group-hover:text-gray-100 dark:group-hover:text-gray-200 transform language-menu-icon" fill="none" viewbox="0 0 24 24" stroke="currentColor">
+									<svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 transition duration-200 text-gray-600 dark:text-gray-300 group-hover:text-gray-600 dark:group-hover:text-gray-200 transform language-menu-icon" fill="none" viewbox="0 0 24 24" stroke="currentColor">
 										<path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M19 9l-7 7-7-7" />
 									</svg>
 								</div>
