modified donate button's colors

--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
 
 	<body class="flex flex-col h-screen justify-between bg-gray-100 dark:bg-body font-sourceSansPro transition duration-200 ease-in-out">
 		<!-- nav bar -->
-		<nav class="nav-bar max-w-screen px-6 lg:pr-12 lg:pl-10 mx-auto py-3 lg:py-1 fixed w-screen top-0 bg-gray-100 dark:bg-body transition duration-200 ease-in-out filter z-20 select-none">
+		<nav class="nav-bar max-w-screen px-6 lg:pr-12 lg:pl-14 mx-auto py-3 lg:py-1 fixed w-screen top-0 bg-gray-100 dark:bg-body transition duration-200 ease-in-out filter z-20 select-none">
 			<div class="flex justify-between">
 				<!-- logo -->
 				<div class="flex items-center lg:mr-10 space-x-10">
@@ -46,8 +46,8 @@
 					<!-- donate button -->
 					<div class="relative">
 						<div class="h-[3.5rem] flex items-center">
-							<button class="group donate-nav-button  bg-indigo-500 dark:bg-indigo-700 hover:bg-indigo-700 dark:hover:bg-indigo-800 rounded-full px-5 py-1 transition duration-300">
-								<span class="text-[1.05rem] font-semibold text-white transition-colors duration-200"> Donate </span>
+							<button class="group donate-nav-button  bg-gray-700 dark:bg-gray-300 text-gray-200 dark:text-gray-800 hover:bg-gray-900 dark:hover:bg-white rounded-full px-5 py-1 transition duration-300">
+								<span class="text-[1.05rem] font-semibold"> Donate </span>
 							</button>
 						</div>
 					</div>
@@ -61,7 +61,7 @@
 								<!-- icon -->
 								<div class="">
 									<svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 transition duration-200 text-gray-600 dark:text-gray-300 group-hover:text-gray-600 dark:group-hover:text-gray-200 transform language-menu-icon" fill="none" viewbox="0 0 24 24" stroke="currentColor">
-										<path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M19 9l-7 7-7-7" />
+										<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" />
 									</svg>
 								</div>
 							</button>
@@ -172,7 +172,7 @@
 						<!-- icon -->
 						<div class="pt-0">
 							<svg xmlns="http://www.w3.org/2000/svg" class="mobile-lang-icon transform h-5 w-5 transition-colors duration-200 group-hover:text-pink-500" fill="none" viewbox="0 0 24 24" stroke="currentColor">
-								<path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M19 9l-7 7-7-7" />
+								<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" />
 							</svg>
 						</div>
 					</button>
