--- a/public/lang/cn/faq/index.html
+++ b/public/lang/cn/faq/index.html
@@ -147,7 +147,7 @@
 					</div>
 					<!-- nav button -->
 					<div class="flex items-center">
-						<button class="mobile-button text-yellow-600 active:text-yellow-400 transition-colors">
+						<button class="mobile-button text-[#E23B8B] active:text-logo-purple-dark transition-colors">
 							<!-- icon -->
 							<svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" fill="none" viewbox="0 0 24 24" stroke="currentColor">
 								<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
@@ -162,7 +162,7 @@
 					<a href="/lang/cn" class="block text-gray-600 dark:text-gray-300">主页 </a>
 					<a href="" class="download-buttons block text-gray-600 dark:text-gray-300">下载 </a>
 					<a href="/lang/cn/changelog/" class="block text-gray-600 dark:text-gray-300">更新日志 </a>
-					<a href="/lang/cn/faq/" class="block text-yellow-600 pb-1 border-b-2 border-yellow-600">常见问题解答 </a>
+					<a href="/lang/cn/faq/" class="block text-text-purple pb-1 border-2 rounded-full px-5 py-1 border-logo-purple">常见问题解答 </a>
 					<a href="/lang/cn/credits/" class="block text-gray-600 dark:text-gray-300">团队</a>
 					<button class="mobile-contact-button block text-gray-600 dark:text-gray-300">联系我们</button>
 
