--- a/public/lang/es/changelog/index.html
+++ b/public/lang/es/changelog/index.html
@@ -148,7 +148,7 @@
 					</div>
 					<!-- nav button -->
 					<div class="flex items-center">
-						<button class="mobile-button text-yellow-600 active:text-yellow-400 transition-colors">
+						<button class="mobile-button text-[#E23B8B] active:text-logo-purple-dark transition-colors">
 							<!-- icon -->
 							<svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" fill="none" viewbox="0 0 24 24" stroke="currentColor">
 								<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
@@ -162,7 +162,7 @@
 				<div class="flex flex-col items-center space-y-5 pt-5 pb-3 text-lg md:text-xl">
 					<a href="/lang/es" class="block text-gray-600 dark:text-gray-300">Inicio</a>
 					<a href="" class="download-buttons block text-gray-600 dark:text-gray-300">Descargar</a>
-					<a href="/lang/es/changelog" class="block text-yellow-600 pb-1 border-b-2 border-yellow-600">Cambios</a>
+					<a href="/lang/es/changelog" class="block text-text-purple pb-1 border-2 rounded-full px-5 py-1 border-logo-purple">Cambios</a>
 					<a href="/lang/es/faq/" class="block text-gray-600 dark:text-gray-300">FAQ</a>
 					<a href="/lang/es/credits/" class="block text-gray-600 dark:text-gray-300">Equipo</a>
 					<button class="mobile-contact-button block text-gray-600 dark:text-gray-300">Contacto</button>
